Started the probabilities chapter.

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -368,3 +368,25 @@
 	note = {Page Version ID: 806501824},
 	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\GIH4MVWF\\index.html:text/html}
 }
+
+
+@misc{naep,
+	title = {{NAEP} ({National} {Assessment} of {Educational} {Progress}), {Mathematics}, {Grade} 8, 2017, {Maryland}},
+	url = {https://www.nationsreportcard.gov/ndecore/shareredirect?su=NDE&sb=MAT&gr=8&fr=2&yr=2017R3&sc=MRPCM&ju=MD&vr=TOTAL-false&st=MN-MN--PC-P1-P2-P5-P7-P9&sht=REPORT&urls=xplore&mi=false&svt=true&nd=0&vl=SHORT&yo=DESC&inc=NONE&up=true&rrl=SAMPLE%7CSAMPLE%7C1--JURISDICTION%7CJURISDICTION%7C2--TOTAL%7CVARIABLE%7C3&rtl=&sm=false},
+	urldate = {2018-10-16},
+	author = {National Assessment of Educational Progress},
+	file = {NDE Core Web:C\:\\Users\\Myriam\\Zotero\\storage\\A9TRSZYX\\NDE.html:text/html}
+}
+
+
+@article{mdnaep,
+	title = {Overview of {National} {Assessment} of {Educational} {Progress} ({NAEP}) {Results}, 2017},
+	url = {http://www.marylandpublicschools.org/stateboard/Documents/05222018/TabJ-NAEPResults.pdf},
+	language = {en},
+	urldate = {2018-10-16},
+	author = {Maryland State Department of Education},
+	month = may,
+	year = {2018},
+	pages = {43},
+	file = {2018 - Overview of National Assessment of Educational Pro.pdf:C\:\\Users\\Myriam\\Zotero\\storage\\CUXZPUGP\\2018 - Overview of National Assessment of Educational Pro.pdf:application/pdf}
+}
